--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "nexus4812/gpt-code-flow",
     "require": {
+        "php": "^8.1.0",
         "openai-php/client": "^0.10.2",
         "symfony/http-client": "^7.1",
         "nyholm/psr7": "^1.8"
