--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "php": "^8.1.0",
         "openai-php/client": "^0.10.2",
         "symfony/http-client": "^7.1",
-        "nyholm/psr7": "^1.8"
+        "nyholm/psr7": "^1.8",
+        "symfony/finder": "^7.1"
     },
     "autoload": {
         "psr-4": {
