--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "openai-php/client": "^0.10.2",
         "symfony/http-client": "^7.1",
         "nyholm/psr7": "^1.8",
-        "symfony/finder": "^7.1"
+        "symfony/finder": "^7.1",
+        "league/flysystem": "^3.29"
     },
     "autoload": {
         "psr-4": {
